Form Builder - backend spacing issue

--- a/assets/reactjs/src/blocks/form/style.scss
+++ b/assets/reactjs/src/blocks/form/style.scss
@@ -479,6 +479,17 @@
   > .editor-block-list__insertion-point {
   display: none;
 }
+.block-editor-block-list__layout .block-editor-block-list__block[data-type="qubely/form-row"] {
+  margin: 0px;
+  .block-editor-block-list__layout .block-editor-block-list__block[data-type="qubely/form-column"] {
+    margin-top: 14px;
+    margin-bottom: 14px;
+    .block-editor-block-list__layout .block-editor-block-list__block{
+      margin-top: 14px;
+      margin-bottom: 14px;
+    }
+  }
+}
 
 //others
 .qubely-block-form {
@@ -502,12 +513,11 @@
   }
 }
 
-
-.api-notice{
+.api-notice {
   margin: 0 0 15px;
   background: rgba(0, 255, 55, 0.15);
   padding: 8px 12px;
-  border: 1px solid rgba(0,0,0,.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   line-height: 1.6;
   &.warning {
